--- a/scout_file_protocol.Rmd
+++ b/scout_file_protocol.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "USA MNT Scout File (.dvw) Protocol"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "USA Men's Volleyball"
 output: 
   html_document:
